syntax = "proto3";

package course;

option go_package="gitee.com/jingshanccc/course/course/proto/dto";

//Course Dto
message CourseDto{
  /*
   * id
   */
  string id = 1;

  /*
   * 名称
   */
  string name = 2;

  /*
   * 概述
   */
  string summary = 3;

  /*
   * 时长|单位秒
   */
  int32 time = 4;

  /*
   * 价格（元）
   */
  double price = 5;

  /*
   * 封面
   */
  string image = 6;

  /*
   * 级别|枚举[CourseLevelEnum]：ONE("1", "初级"),TWO("2", "中级"),THREE("3", "高级")
   */
  string level = 7;

  /*
   * 收费|枚举[CourseChargeEnum]：CHARGE("C", "收费"),FREE("F", "免费")
   */
  string charge = 8;

  /*
   * 状态|枚举[CourseStatusEnum]：PUBLISH("P", "发布"),DRAFT("D", "草稿")
   */
  string status = 9;

  /*
   * 报名数
   */
  int32 enroll = 10;

  /*
   * 顺序
   */
  int32 sort = 11;

  /*
   * 创建时间
   */
  string createdAt = 12;

  /*
   * 修改时间
   */
  string updatedAt = 13;

  repeated string categories = 14;

  repeated ChapterDto chapters = 15;

  repeated SectionDto sections = 16;

  string content = 17;

  TeacherDto teacher = 18;

  /*
   * 讲师|teacher.id
   */
  string teacherId = 19;
}

message CoursePageDto {
  int64 page = 1;
  int64 size = 2;
  repeated string sort = 3;
  string blurry = 4;
  int64 total = 5;
  repeated string createTime = 6;
  repeated CourseDto rows = 7;
}

message CourseDtoList{
  repeated CourseDto rows = 1;
}

message CourseContentDto {
  string Id = 1; //课程ID
  string Content = 2; //课程内容
}

message CourseCategoryDto {
  string Id = 1;
  string CourseId = 2;
  string CategoryId = 3;
}

message CourseCategoryDtoList{
  repeated CourseCategoryDto rows = 1;
}

//Category Dto

message CategoryDto{
  string id = 1;
  string name = 2;
  string parent = 3;
  int32 sort = 4;
}

message CategoryPageDto {
  int64 page = 1;
  int64 size = 2;
  repeated string sort = 3;
  string blurry = 4;
  int64 total = 5;
  string parent = 6;
  repeated CategoryDto rows = 7;
}

message CategoryDtoList{
  repeated CategoryDto rows = 1;
}

//Chapter Dto
message ChapterDto{
  string id = 1;
  string courseId = 2;
  string name = 3;
  int32  sort = 4;
}
message ChapterDtoList{
  repeated ChapterDto rows = 1;
}

message ChapterPageDto{
  int64 page = 1;
  int64 size = 2;
  repeated string sort = 3;
  string blurry = 4;
  int64 total = 5;
  repeated string createTime = 6;
  string courseId = 7;
  repeated ChapterDto rows = 8;
}

//Section Dto
message SectionDto{
  /*
   * id
   */
  string id = 1;

  /*
   * 标题
   */
  string title = 2;

  /*
   * 课程|course.id
   */
  string courseId = 3;

  /*
   * 大章|chapter.id
   */
  string chapterId = 4;

  /*
   * 视频
   */
  string video = 5;

  /*
   * 时长|单位秒
   */
  int32 time = 6;

  /*
   * 收费
   */
  string charge = 7;

  /*
   * 顺序
   */
  int32 sort = 8;

  /*
   * 创建时间
   */
  string createdTime = 9;

  /*
   * 修改时间
   */
  string updatedTime = 10;
}

message SectionPageDto{
  int64 page = 1;
  int64 size = 2;
  repeated string sort = 3;
  string blurry = 4;
  int64 total = 5;
  repeated string createTime = 6;
  string courseId = 7;
  string chapterId = 8;
  repeated SectionDto rows = 9;
}

//Teacher Dto
message TeacherDto {
  /*
   * id
   */
  string id = 1;

  /*
   * 姓名
   */
  string name = 2;

  /*
   * 头像
   */
  string image = 3;

  /*
   * 职位
   */
  string position = 4;

  /*
   * 简介
   */
  string intro = 5;
}

message TeacherPageDto {
  int64 page = 1;
  int64 size = 2;
  repeated string sort = 3;
  string blurry = 4;
  int64 total = 5;
  repeated TeacherDto rows = 6;
}

message TeacherDtoList {
  repeated TeacherDto rows = 1;
}

//CourseFileDto
message CourseFileDto{
  /**
   * id
   */
  string Id = 1;

  /**
   * 课程id
   */
  string CourseId = 2;

  /**
   * 地址
   */
  string Url = 3;

  /**
   * 文件名
   */
  string Name = 4;

  /**
   * 大小|字节b
   */
  int32 Size = 5;
}
message CourseFileDtoList {
  repeated CourseFileDto rows = 1;
}

//修改排序使用
message SortDto {
  string Id = 1;
  int32 OldSort = 2;
  int32 NewSort = 3;
}